@@ -15,6 +15,8 @@ Un clic droit sur les boutons permet d'accéder directement au réglages corresp
 Plus de serveur d'images DSS.
 Mise à jour de la base de donnée SAC à la version 8.1.
 Sur Mac OS X le répertoire utilisateur change de ~/.skychart vers ~/Library/Application Support/skychart
+Correction du serveur tcp/ip sur Mac OS X.
+Dessine un petit cercle pour indiquer le résultat de recherche.
 Beaucoup de correction de bug.
 
 Le détail des changement est ici:
